--- a/nb/EDA.ipynb
+++ b/nb/EDA.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./data/final_birds_list_with_no_mistakes.csv\"\n",
+    "path = \"../data/final_birds_list_with_no_mistakes.csv\"\n",
     "\n",
     "df = pd.read_csv(path, index_col=0).drop(\"X\", axis=1)"
    ]
