--- a/nb/EDA.ipynb
+++ b/nb/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "db0f5b91",
    "metadata": {},
    "outputs": [],
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2d3ac19b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"../data/final_birds_list_with_no_mistakes.csv\"\n",
+    "path = \"../data/raw/final_birds_list_with_no_mistakes.csv\"\n",
     "\n",
     "df = pd.read_csv(path, index_col=0).drop(\"X\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "334cf02e",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "2a236a1c",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "(9958, 99)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "22581396",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "Neutral.count                                                                  208"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "55680ad2",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "Name: Gene.name, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,12 +1031,310 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4431a39b",
+   "metadata": {},
+   "source": [
+    "### Orders \"hash\" table formation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af3e4aeb",
+   "execution_count": 10,
+   "id": "a2e55ebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species.name</th>\n",
+       "      <th>Taxonomy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Species.name                                           Taxonomy\n",
+       "1  Acanthisitta chloris  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...\n",
+       "2  Acanthisitta chloris  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata..."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders = df[[\"Species.name\", \"Taxonomy\"]]\n",
+    "orders.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3cffbf2d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "orders[\"Taxonomy\"] = orders.Taxonomy.apply(eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "77c64e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(set(orders.Taxonomy.apply(lambda x: x[12]))) == 1  # birds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c7a747be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Acanthisittidae', 'Acanthisitta']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus']),\n",
+       "       list(['Aves', 'Neognathae', 'Passeriformes', 'Meliphagoidea', 'Meliphagidae', 'Acanthorhynchus'])],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Passeriformes\n",
+    "orders.Taxonomy.apply(lambda x: x[12:]).head(20).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c04c23f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert \"Passeriformes\" in set(orders.Taxonomy.apply(lambda x: x[14]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ec6438de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders[\"Order\"] = orders.Taxonomy.apply(lambda x: x[14])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8f62eaad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species.name</th>\n",
+       "      <th>Taxonomy</th>\n",
+       "      <th>Order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10026</th>\n",
+       "      <td>Zosterops poliogastrus</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10027</th>\n",
+       "      <td>Zosterops poliogastrus</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10028</th>\n",
+       "      <td>Zosterops poliogastrus</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10029</th>\n",
+       "      <td>Zosterops poliogastrus</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10030</th>\n",
+       "      <td>Zosterops poliogastrus</td>\n",
+       "      <td>[Eukaryota, Metazoa, Chordata, Craniata, Verte...</td>\n",
+       "      <td>Passeriformes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9958 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Species.name  \\\n",
+       "1        Acanthisitta chloris   \n",
+       "2        Acanthisitta chloris   \n",
+       "3        Acanthisitta chloris   \n",
+       "4        Acanthisitta chloris   \n",
+       "5        Acanthisitta chloris   \n",
+       "...                       ...   \n",
+       "10026  Zosterops poliogastrus   \n",
+       "10027  Zosterops poliogastrus   \n",
+       "10028  Zosterops poliogastrus   \n",
+       "10029  Zosterops poliogastrus   \n",
+       "10030  Zosterops poliogastrus   \n",
+       "\n",
+       "                                                Taxonomy          Order  \n",
+       "1      [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "2      [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "3      [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "4      [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "5      [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "...                                                  ...            ...  \n",
+       "10026  [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "10027  [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "10028  [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "10029  [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "10030  [Eukaryota, Metazoa, Chordata, Craniata, Verte...  Passeriformes  \n",
+       "\n",
+       "[9958 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders"
+   ]
   },
   {
    "cell_type": "code",
