--- a/nb/EDA.ipynb
+++ b/nb/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "db0f5b91",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "2d3ac19b",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "334cf02e",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "a2e55ebc",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "2  Acanthisitta chloris  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3cffbf2d",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "77c64e09",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "c7a747be",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1152,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,28 +1164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "c04c23f2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert \"Passeriformes\" in set(orders.Taxonomy.apply(lambda x: x[14]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "ec6438de",
    "metadata": {},
    "outputs": [],
@@ -1195,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "8f62eaad",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1316,7 @@
        "[9958 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,8 +1327,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "7160e9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Passeriformes', 'Accipitriformes', 'Bucerotiformes',\n",
+       "       'Galloanserae', 'Caprimulgimorphae', 'Charadriiformes',\n",
+       "       'Psittaciformes', 'Coraciiformes', 'Gruiformes', 'Pelecaniformes',\n",
+       "       'Sphenisciformes', 'Apterygiformes', 'Strigiformes',\n",
+       "       'Galbuliformes', 'Columbiformes', 'Piciformes', 'Falconiformes',\n",
+       "       'Casuariiformes', 'Cuculiformes', 'Ciconiiformes', 'Coliiformes',\n",
+       "       'Musophagiformes', 'Tinamiformes', 'Procellariiformes',\n",
+       "       'Gaviiformes', 'Phoenicopteriformes', 'Rheiformes', 'Upupiformes',\n",
+       "       'Struthioniformes', 'Podicipediformes', 'Trogoniformes'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.Order.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f0c0c83e",
+   "id": "9303da45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8a74710",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57513f4b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1361,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
