--- a/nb/EDA.ipynb
+++ b/nb/EDA.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2d3ac19b",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,248 @@
     "\n",
     "df = pd.read_csv(path, index_col=0).drop(\"X\", axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bcdea44c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species.name</th>\n",
+       "      <th>Realm</th>\n",
+       "      <th>TrophicLevel</th>\n",
+       "      <th>TrophicNiche</th>\n",
+       "      <th>ForagingNiche</th>\n",
+       "      <th>GenbankID</th>\n",
+       "      <th>Taxonomy</th>\n",
+       "      <th>Gene.name</th>\n",
+       "      <th>Gene.start.end.and.trend</th>\n",
+       "      <th>GeneID</th>\n",
+       "      <th>...</th>\n",
+       "      <th>GAA</th>\n",
+       "      <th>GAG</th>\n",
+       "      <th>GGT</th>\n",
+       "      <th>GGC</th>\n",
+       "      <th>GGA</th>\n",
+       "      <th>GGG</th>\n",
+       "      <th>TAA</th>\n",
+       "      <th>TAG</th>\n",
+       "      <th>TGA</th>\n",
+       "      <th>temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>Australian</td>\n",
+       "      <td>Carnivore</td>\n",
+       "      <td>Invertivore</td>\n",
+       "      <td>Invertivore bark</td>\n",
+       "      <td>[NC_051004]</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "      <td>[ND2]</td>\n",
+       "      <td>[4018:5057](+)</td>\n",
+       "      <td>GeneID:59701857</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>Australian</td>\n",
+       "      <td>Carnivore</td>\n",
+       "      <td>Invertivore</td>\n",
+       "      <td>Invertivore bark</td>\n",
+       "      <td>[NC_051004]</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "      <td>[ND3]</td>\n",
+       "      <td>[9570:9921](+)</td>\n",
+       "      <td>GeneID:59701878</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>Australian</td>\n",
+       "      <td>Carnivore</td>\n",
+       "      <td>Invertivore</td>\n",
+       "      <td>Invertivore bark</td>\n",
+       "      <td>[NC_051004]</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "      <td>[ATP8]</td>\n",
+       "      <td>[7876:8044](+)</td>\n",
+       "      <td>GeneID:59701874</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>Australian</td>\n",
+       "      <td>Carnivore</td>\n",
+       "      <td>Invertivore</td>\n",
+       "      <td>Invertivore bark</td>\n",
+       "      <td>[NC_051004]</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "      <td>[ND1]</td>\n",
+       "      <td>[2822:3800](+)</td>\n",
+       "      <td>GeneID:59701858</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Acanthisitta chloris</td>\n",
+       "      <td>Australian</td>\n",
+       "      <td>Carnivore</td>\n",
+       "      <td>Invertivore</td>\n",
+       "      <td>Invertivore bark</td>\n",
+       "      <td>[NC_051004]</td>\n",
+       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
+       "      <td>[ND4]</td>\n",
+       "      <td>[10283:11651](+)</td>\n",
+       "      <td>GeneID:59701844</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 99 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Species.name       Realm TrophicLevel TrophicNiche  \\\n",
+       "1  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
+       "2  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
+       "3  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
+       "4  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
+       "5  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
+       "\n",
+       "      ForagingNiche    GenbankID  \\\n",
+       "1  Invertivore bark  [NC_051004]   \n",
+       "2  Invertivore bark  [NC_051004]   \n",
+       "3  Invertivore bark  [NC_051004]   \n",
+       "4  Invertivore bark  [NC_051004]   \n",
+       "5  Invertivore bark  [NC_051004]   \n",
+       "\n",
+       "                                            Taxonomy Gene.name  \\\n",
+       "1  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND2]   \n",
+       "2  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND3]   \n",
+       "3  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...    [ATP8]   \n",
+       "4  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND1]   \n",
+       "5  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND4]   \n",
+       "\n",
+       "  Gene.start.end.and.trend           GeneID  ... GAA GAG  GGT  GGC GGA  GGG  \\\n",
+       "1           [4018:5057](+)  GeneID:59701857  ...   2   3    0    5   3    3   \n",
+       "2           [9570:9921](+)  GeneID:59701878  ...   4   2    0    4   1    0   \n",
+       "3           [7876:8044](+)  GeneID:59701874  ...   0   0    0    0   0    0   \n",
+       "4           [2822:3800](+)  GeneID:59701858  ...   5   6    0    5   2    6   \n",
+       "5         [10283:11651](+)  GeneID:59701844  ...   7   2    2    9   3    2   \n",
+       "\n",
+       "  TAA  TAG  TGA  temp  \n",
+       "1   0    0    7     1  \n",
+       "2   1    0    4     1  \n",
+       "3   1    0    4     1  \n",
+       "4   0    0    5     1  \n",
+       "5   0    0   11     1  \n",
+       "\n",
+       "[5 rows x 99 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b853dade",
+   "metadata": {},
+   "source": [
+    "camelcase - SpeciesName\n",
+    "\n",
+    "shakecase - species_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e78352",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1002,6 +1244,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "df823c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = df[\"Translated.aminoacids.by.Python\"].str.replace(\"Ю\", \"X\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d9f3a973",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not any(a.str.contains(\"[ATGCX]+\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "736b8f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not any(a.str.contains(\"Ю\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "68855ac6",
    "metadata": {},
@@ -1040,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "a2e55ebc",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1373,7 @@
        "2  Acanthisitta chloris  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,17 +1385,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "id": "3cffbf2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5298/2798867912.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  orders[\"Taxonomy\"] = orders.Taxonomy.apply(eval)\n"
+     ]
+    }
+   ],
    "source": [
+    "# string list to tist\n",
     "orders[\"Taxonomy\"] = orders.Taxonomy.apply(eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "77c64e09",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "c7a747be",
    "metadata": {},
    "outputs": [
@@ -1152,45 +1449,87 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Passeriformes\n",
-    "orders.Taxonomy.apply(lambda x: x[12:]).head(20).values"
+    "orders.Taxonomy.apply(lambda x: x[12:]).head(20).values  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "id": "c04c23f2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert \"Passeriformes\" in set(orders.Taxonomy.apply(lambda x: x[14]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "id": "ec6438de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5298/706906315.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  orders[\"Order\"] = orders.Taxonomy.apply(lambda x: x[14])\n"
+     ]
+    }
+   ],
    "source": [
     "orders[\"Order\"] = orders.Taxonomy.apply(lambda x: x[14])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6fcee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "704a9c32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "2        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "3        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "4        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "5        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "                               ...                        \n",
+       "10026    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "10027    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "10028    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "10029    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "10030    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
+       "Name: Taxonomy, Length: 9958, dtype: object"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.Taxonomy.str.join(\"|\")"
    ]
   },
   {
